Bug 1529467 - Make TextInputHandler::HandleCommand() dispatch eKeyDown event r=m_kato a=lizzard

Currently, when IME sends a command with committing composition,
TextInputHandler::HandleCommand() dispatches a *fake* `keypress` event
for making default event handler (e.g., focused editor) handle the
event.  However, we stopped dispatching `keypress` events for
non-printable keys.  Therefore, web apps cannot do that like us.

On macOS, simple conversion IMEs like Korean 2-set IME, behave
differently if active application is changed.  E.g., on Safari,
some of them may never use composition string, but not so on
Chrome and Firefox.  So, this is what the case we need to emulate
Safari's behavior.

Dispatching a fake `keydown` event for this purpose does **not**
conform to UI Events because `keydown` events should notify web
apps of **physical** key state changes.  However, Chrome dispatches
fake `keydown` events intentionally.  Therefore, we should follow
this hacky behavior for user experience.

Differential Revision: https://phabricator.services.mozilla.com/D20644

--HG--
extra : rebase_source : ee1b29d8c466da7acef99d415e7cd54bb54e200c
extra : source : 36874ca17f849005def814927d8beb56ed2d3fba